--- a/public/venda.html
+++ b/public/venda.html
@@ -140,7 +140,7 @@
                     <label for="tipoEntrega">Tipo de Entrega</label>
                     <select class="form-control" id="tipoEntrega" required>
                       <option value="retirada">Retirada</option>
-                      <option value="entrega">Entrega</option>
+                      <option value="entrega">Delivery</option>
                     </select>
                   </div>
   
